# OwOS

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeToolchain.txt  Makefile  README.md
src/kernel/: CMakeLists.txt  early_entry.cpp  entry.cpp  panic.cpp
src/kernel/arch/: Processor.cpp  stack_tracing.cpp
src/kernel/arch/i686/: CMakeLists.txt  IO.cpp  Processor.cpp  boot.S  bootAP.S  crti.S  crtn.S  gdt.cpp  interrupt_stubs.hpp  interrupts.cpp  linker.ld  memory.cpp  pic.cpp  processor.cpp  smp.cpp  spinlock.cpp  stack_tracing.cpp
src/kernel/crt/: icxxabi.cpp  ssp.cpp  ubsan.cpp
src/kernel/devices/: FramebufferDevice.cpp  KeyboardDevice.cpp  PS2KeyboardDevice.cpp  SerialDevice.cpp  SerialPort.cpp  StdioDevice.cpp
src/kernel/elf/: elf.cpp
src/kernel/filesystem/: Ext2FileSystem.cpp  File.cpp  FileContext.cpp  FileSystemCache.cpp  VirtualFileSystem.cpp
src/kernel/firmware/: BIOS.cpp
src/kernel/firmware/acpi/: Parser.cpp
src/kernel/heap/: BitmapHeap.cpp  BitmapHeap.hpp  kcmalloc.cpp  kmalloc.cpp
src/kernel/include/: IO.hpp  common_attributes.h  multiboot.h  panic.hpp  tests.hpp
src/kernel/include/arch/: Processor.hpp  definitions.hpp  interrupts.hpp  io.hpp  memory.hpp  process.hpp  processor.hpp  smp.hpp  spinlock.hpp  stack_tracing.hpp
src/kernel/include/arch/i686/: Processor.hpp  gdt.hpp  interrupts.hpp  io.hpp  memory.hpp  msr.hpp  pic.hpp  process.hpp  processor.hpp  spinlock.hpp
src/kernel/include/crt/: icxxabi.hpp
src/kernel/include/devices/: BlockDevice.hpp  CharacterDevice.hpp  Device.hpp  FramebufferDevice.hpp  KeyCode.hpp  KeyboardDevice.hpp  PS2KeyboardDevice.hpp  SerialDevice.hpp  SerialPort.hpp  StdioDevice.hpp
src/kernel/include/elf/: definitions.hpp  elf.hpp
src/kernel/include/filesystem/: Ext2FileSystem.hpp  File.hpp  FileContext.hpp  FileSystem.hpp  FileSystemCache.hpp  VirtualFileSystem.hpp  definitions.hpp
src/kernel/include/firmware/: BIOS.hpp
src/kernel/include/firmware/acpi/: Parser.hpp  definitions.hpp
src/kernel/include/heap/: kmalloc.hpp
src/kernel/include/interrupts/: IOAPIC.hpp  IRQHandler.hpp  InterruptController.hpp  InterruptHandler.hpp  InterruptManager.hpp  LAPIC.hpp  PIC.hpp  SharedIRQHandler.hpp  UnhandledInterruptHandler.hpp  definitions.hpp  forward.hpp
src/kernel/include/libk/: AVLTree.hpp  ArrayView.hpp  CircularBuffer.hpp  Concurrent.hpp  ErrorOr.hpp  GUID.hpp  StringView.hpp  __allocators.hpp  __iterators.hpp  karray.hpp  kassert.hpp  katomic.hpp  kcassert.hpp  kcctype.hpp  kcmalloc.hpp  kcstdarg.hpp  kcstddef.hpp  kcstdio.hpp  kcstdlib.hpp  kcstring.hpp  kctype.hpp  kfunctional.hpp  kiterator.hpp  klist.hpp  kmalloc.hpp  kmath.hpp  kmemory.hpp  kshared_ptr.hpp  kstack.hpp  kstdarg.hpp  kstdio.hpp  kstring.hpp  ktype_traits.hpp  kutility.hpp  kvector.hpp  new  printf.hpp  srmw_queue.hpp
src/kernel/include/locking/: Mutex.hpp
src/kernel/include/logging/: logger.hpp
src/kernel/include/memory/: MMIO.hpp  MemoryManager.hpp  MultibootMap.hpp  Pages.hpp  PhysicalMemoryManager.hpp  VirtualMemoryManager.hpp  definitions.hpp
src/kernel/include/pci/: definitions.hpp  pci.hpp
src/kernel/include/processes/: CoreScheduler.hpp  GlobalScheduler.hpp  Process.hpp  definitions.hpp
src/kernel/include/storage/: GPT.hpp  PartitionDevice.hpp  StorageDevice.hpp  definitions.hpp
src/kernel/include/storage/ata/: AHCICommandSlot.hpp  AHCIController.hpp  AHCIManager.hpp  AHCIPort.hpp  definitions.hpp
src/kernel/include/syscall/: SyscallDispatcher.hpp  syscalls.hpp
src/kernel/include/time/: EventManager.hpp  PIT.hpp  TimeManager.hpp  Timer.hpp
src/kernel/include/tty/: ANSIColor.hpp  Console.hpp  FramebufferConsole.hpp  TTY.hpp  Terminal.hpp  VirtualConsole.hpp  definitions.hpp  psf.hpp
src/kernel/include/vga/: TextmodeBuffer.hpp  textmode.hpp
src/kernel/interrupts/: IOAPIC.cpp  InterruptHandler.cpp  InterruptManager.cpp  LAPIC.cpp  PIC.cpp
src/kernel/libk/: kassert.cpp  kcassert.cpp  kcctype.cpp  kcstdio.cpp  kcstdlib.cpp  kcstring.cpp  kctype.cpp  kstdio.cpp  kstring.cpp  printf.cpp  printf.hpp
src/kernel/locking/: Mutex.cpp
src/kernel/logging/: logger.cpp  message_queue.hpp
src/kernel/memory/: MemoryManager.cpp  MultibootMap.cpp  PhysicalMemoryManager.cpp  VirtualMemoryManager.cpp
src/kernel/pci/: pci.cpp
src/kernel/processes/: CoreScheduler.cpp  GlobalScheduler.cpp  Process.cpp
src/kernel/storage/: GPT.cpp  PartitionDevice.cpp  StorageDevice.cpp
src/kernel/storage/ata/: AHCICommandSlot.cpp  AHCIController.cpp  AHCIManager.cpp  AHCIPort.cpp
src/kernel/syscall/: SyscallDispatcher.cpp  chdir.cpp  close.cpp  exec.cpp  exit.cpp  fork.cpp  getcwd.cpp  getdents.cpp  ioctl.cpp  mmap.cpp  munmap.cpp  open.cpp  read.cpp  sigaction.cpp  sigreturn.cpp  stat.cpp  test.cpp  waitpid.cpp  write.cpp
src/kernel/tests/: definitions.hpp  test_crtx.cpp  test_heap.cpp  test_printf.cpp  test_vmm.cpp
src/kernel/time/: EventManager.cpp  PIT.cpp  TimeManager.cpp
src/kernel/tty/: FramebufferConsole.cpp  README.md  TTY.cpp  Terminal.cpp  font.psf  font_in.S  psf.cpp
src/kernel/vga/: textmode.cpp
src/userland/editor/: CMakeLists.txt  main.c
src/userland/ld-owos/: CMakeLists.txt  debug.c  debug.h  main.c
src/userland/ld-owos/elf/: elf.h  linker.c  linker.h  loader.c  loader.h  shared_object.c  shared_object.h
src/userland/libc/: .clang-format  CMakeLists.txt  __debug.c  __debug.h  __heap.c  __heap.h  __malloc.c  __printf.c  __printf.h  assert.c  assert.h  ctype.c  ctype.h  dirent.c  dirent.h  dlfcn.c  dlfcn.cpp  dlfcn.h  errno.h  fcntl.c  fcntl.h  limits.h  locale.c  locale.h  math.c  math.h  signal.c  signal.h  stddef.h  stdint.h  stdio.c  stdio.cpp  stdio.h  stdlib.c  stdlib.cpp  stdlib.h  string.c  string.cpp  string.h  termios.c  (+9 more)
src/userland/libc/bits/: FILE.h  attributes.h  environ.h  guards.h
src/userland/libc/sys/: auxv.h  internals.c  internals.h  ioctl.c  ioctl.h  mman.c  mman.h  stat.c  stat.h  syscall.h  types.h  wait.c  wait.h
src/userland/libc/sys/arch/i386/: auxv.h  crt0.S  syscall.c  syscall.h
src/userland/test/: CMakeLists.txt  main.c  main.cpp
(+29 files in other folders)
